UNRELEASED, S3QL tip
  * Fixed a race condition that could lead to a "KeyError" crash
    when refreshing a Google Storage OAuth2 access token.

  * Fixed a race condition that could lead to a hanging mount.s3ql
    process and hanging test_thread_hang() unit test.

  * Updated internal metadata storage and checksum format. The old
    format was difficult to secure against malicious backend data and
    could have resulted in false-positive checksum mismatches with
    future or different Python interpreters.

  * Sizes (e.g. in the s3qlstat output) are now always reported
    with three significant digits.

  * Fixed a bug that caused fsck.s3ql to either abort with a
    "apsw.ConstraintError" or to incorrectly consider storage
    objects as missing when the connection to remote server is
    interrupted while retrieving the object list.

  * Storage urls without any prefix (e.g. s3://foo, but also
    s3://foo/) are now using the same local cache
    directory. Previously they would use different directories,
    despite pointing to the same file system.

    (Note that this does not affect storage urls with a prefix,
    s3://foo/bar and s3://foo/bar/ refer to different locations in the
    bucket, and thus correctly use different cache directories).

  * Fixed a problem where mount.s3ql would crash when unmouting the
    file system because it could not delete the cache directory. This
    could happen when the file system was not unmounted cleanly, but
    fsck.s3ql was then run on a different system (or using a different
    cache directory).

2014-11-09, S3QL 2.12

  * The s3c backend has a new 'dumb-copy' option. If this option
    is enabled, copy operations are assumed to have succeeded
    as soon as the server returns a '200 OK' status, without
    checking the contents of the response body.

  * The swift and s3c backends have a new 'disable-expect100' to
    disable support for the 'Expect: continue' header. Using this